--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fastify/swagger": "^8.12.0",
     "@fastify/swagger-ui": "^2.1.0",
     "@prisma/client": "^6.14.0",
+    "@vercel/node": "^5.3.22",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
